# waste-minimization-mesa

./: LICENSE  README.md  com_desconto.db  comparar_reposicao.py  export.py  gerar_graficos.py  grafico_control.db  grafico_demanda.db  grafico_discount.db  grafico_fixa.db  projeto_completo.txt  pyproject.toml  requirements.txt  sem_desconto.db  varejo_simulacao.db
src/waste_minimization_mesa/: __init__.py  __main__.py  agents.py  cli.py  db.py  model.py
